Allow apps with 0 instances to be started
[finishes #127824189]

Signed-off-by: Luan Santos <lsantos@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -20,6 +20,10 @@
     "translation": "\nApp gestartet\n"
   },
   {
+    "id": "\nApp state changed to started, but note that it has 0 instances.\n",
+    "translation": ""
+  },
+  {
     "id": "\nApp {{.AppName}} was started using this command `{{.Command}}`\n",
     "translation": "\nApp {{.AppName}} wurde mit diesem Befehl gestartet: `{{.Command}}`\n"
   },
