--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -20,6 +20,10 @@
     "translation": "\nアプリが開始されました\n"
   },
   {
+    "id": "\nApp state changed to started, but note that it has 0 instances.\n",
+    "translation": ""
+  },
+  {
     "id": "\nApp {{.AppName}} was started using this command `{{.Command}}`\n",
     "translation": "\nアプリ {{.AppName}} はコマンド `{{.Command}}` を使用して開始されました\n"
   },
