--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -20,6 +20,10 @@
     "translation": "\n应用程序已启动\n"
   },
   {
+    "id": "\nApp state changed to started, but note that it has 0 instances.\n",
+    "translation": ""
+  },
+  {
     "id": "\nApp {{.AppName}} was started using this command `{{.Command}}`\n",
     "translation": "\n应用程序 {{.AppName}} 已使用以下命令启动:{{.Command}}`\n"
   },
