Implement rune replacement in 'cf logs'
[#128174339]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -3564,6 +3564,10 @@
     "translation": "Umbenennen von Bereich {{.OldSpaceName}} in {{.NewSpaceName}} in Organisation {{.OrgName}} als {{.CurrentUser}}..."
   },
   {
+    "id": "Replace the specified rune (in hex) with a newline",
+    "translation": ""
+  },
+  {
     "id": "Repo Name",
     "translation": "Repositoryname"
   },
